// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookIntegrationAds actions fetchAds() should fetch ads 1`] = `
Array [
  Object {
    "payload": true,
    "type": "SET_FACEBOOK_ADS_LOADING",
  },
  Object {
    "payload": Object {
      "1": Object {
        "ads": Object {
          "postid1": Object {
            "comments_fetched_at": "2019-01-01 10:30:00",
            "is_active": true,
            "name": "ad 1",
          },
        },
      },
    },
    "type": "SET_FACEBOOK_ADS_INTERNALS",
  },
  Object {
    "payload": false,
    "type": "SET_FACEBOOK_ADS_LOADING",
  },
]
`;

exports[`FacebookIntegrationAds actions updateAd() should activate ad 1`] = `
Array [
  Object {
    "payload": "postid1",
    "type": "ADD_LOADING_FACEBOOK_AD",
  },
  Object {
    "payload": Object {
      "id": "postid1",
      "integrationId": 1,
      "isActive": true,
    },
    "type": "UPDATE_ACTIVE_FACEBOOK_AD",
  },
  Object {
    "payload": "postid1",
    "type": "REMOVE_LOADING_FACEBOOK_AD",
  },
]
`;

exports[`FacebookIntegrationAds actions updateAd() should deactivate ad 1`] = `
Array [
  Object {
    "payload": "postid1",
    "type": "ADD_LOADING_FACEBOOK_AD",
  },
  Object {
    "payload": Object {
      "id": "postid1",
      "integrationId": 1,
      "isActive": false,
    },
    "type": "UPDATE_ACTIVE_FACEBOOK_AD",
  },
  Object {
    "payload": "postid1",
    "type": "REMOVE_LOADING_FACEBOOK_AD",
  },
]
`;
